...
            "state": "translated",
            "value": "账户"
          }
        }
      }
    },
    "Accounts": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "账户"
          }
...
            "state": "translated",
            "value": "当前账本"
          }
        }
      }
    },
    "Activity": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "动态"
          }
...
            "state": "translated",
            "value": "添加计划"
          }
        }
      }
    },
    "Add Transaction": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "添加交易"
          }
...
            "state": "translated",
            "value": "全部"
          }
        }
      }
    },
    "All Transactions": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "全部交易"
          }
...
            "state": "translated",
            "value": "预算提醒"
          }
        }
      }
    },
    "Budgets": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "预算"
          }
...
            "state": "translated",
            "value": "该分组中的预算将变为未分组。"
          }
        }
      }
    },
    "Calendar": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "日历"
          }
...
            "state": "translated",
            "value": "上限"
          }
        }
      }
    },
    "Categories": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "类别"
          }
...
            "state": "translated",
            "value": "留空以跟踪所有支出类别和账户。"
          }
        }
      }
    },
    "Ledger": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "账本"
          }
...
            "state": "translated",
            "value": "月份"
          }
        }
      }
    },
    "Month and year": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "月份与年份"
          }
...
            "state": "translated",
            "value": "每月"
          }
        }
      }
    },
    "More": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "更多"
          }
...
            "state": "translated",
            "value": "选择"
          }
        }
      }
    },
    "Select a budget": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "选择预算"
          }
...
            "state": "translated",
            "value": "在下方选择要移入此新分组的账户（可选）。"
          }
        }
      }
    },
    "Select an account": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "选择账户"
          }
...
            "state": "translated",
            "value": "正在设置 iCloud 同步…"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "设置"
          }
...
            "state": "translated",
            "value": "交易总额"
          }
        }
      }
    },
    "Transactions": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "交易"
          }
...
